fixing android studio jdk 8 support